[metadata]
name = gotenzl
version = 0.1.0
author = Đạt bro
author_email = datbao2445@gmail.com
description = Python package for Zalo chat automation
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/username/gotenzl
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
install_requires =
    requests
    pycryptodome
    
